--- a/baixo.html
+++ b/baixo.html
@@ -14,7 +14,7 @@
     <div class="row rowGrid3">
       <div class="col-lg-4 col-sm-6 grid3">
         <div>
-          <div><img src="Projeto/cta2.jpg" class="imgGrid3"></div>
+          <div><img src="images/cta2.jpg" class="imgGrid3"></div>
           <h4 class="tittleGrid3">Chilenos criam sacos plásticos solúveis em água que não poluem</h4>
           <p class="para3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           <button class="saibaMais">Saiba Mais</button>
@@ -22,7 +22,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 grid3">
         <div>
-          <div><img src="Projeto/cta2.jpg" class="imgGrid3"></div>
+          <div><img src="images/cta2.jpg" class="imgGrid3"></div>
           <h4 class="tittleGrid3">Chilenos criam sacos plásticos solúveis em água que não poluem</h4>
           <p class="para3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           <button class="saibaMais">Saiba Mais</button>
@@ -30,7 +30,7 @@
       </div>
       <div class="col-lg-4 col-sm-6 grid3">
         <div>
-          <div><img src="Projeto/cta2.jpg" class="imgGrid3"></div>
+          <div><img src="images/cta2.jpg" class="imgGrid3"></div>
           <h4 class="tittleGrid3">Chilenos criam sacos plásticos solúveis em água que não poluem</h4>
           <p class="para3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           <button class="saibaMais">Saiba Mais</button>
